fix: use flexbox centering for calligraphy SVG on mobile
margin: 0 auto fails in Edge when the browser can't compute
intrinsic SVG width. Flexbox centering on the parent container
works reliably across all browsers.

--- a/_sass/klise/_layout.scss
+++ b/_sass/klise/_layout.scss
@@ -241,6 +241,12 @@
   .author-content {
     flex: 1;
     min-width: 0;
+
+    @include media-query($on-mobile) {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
   }
 
   .author-name {
@@ -258,8 +264,6 @@
 
     @include media-query($on-mobile) {
       height: 2.8em;
-      margin-left: auto;
-      margin-right: auto;
     }
   }
 
